...
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></View>

            <Button
                android:id="@+id/menuButton"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/hamburger_icon"
                style="@style/spinnerItemStyle"/>
...
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Name"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/beanactivity_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Name"
                        android:gravity="end"
...
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Origin"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/beanactivity_origin_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Origin"
                        android:gravity="end"
...
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Farm"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/beanactivity_farm_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Farm"
                        android:gravity="end"
...
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Drying Method"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/beanactivity_drymethod_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Drying"
                        android:gravity="end"
...
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Process"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/beanactivity_process_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Process"
                        android:gravity="end"
...
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Flavours"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/beanactivity_flavour_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Flavours"
                        android:gravity="end"
...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@color/grayBack"
            android:layout_weight="1">
            <Button
                android:id="@+id/beanactivity_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
...
