...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="110dp"
        android:weightSum="6">
    <ScrollView
        android:id="@+id/roastparamactivity_scrollview"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grayBack"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

...
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:text="Name"
                android:textSize="20dp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/roastparamactivity_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/lightGray"
                android:hint="Name"
                android:gravity="end"
...
                    android:layout_height="wrap_content"
                    android:text="Bean"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"/>
                <Spinner
                    android:id="@+id/roastparamactivity_bean_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    style="@style/spinnerItemStyleWhite"
                    />
            </LinearLayout>
...
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="Roast level"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/roastparamactivity_roastlevel_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/lightGray"
                    android:hint="level"
                    android:gravity="end"
...
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="Drop Temp"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/roastparamactivity_droptemp_edittext"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textColor="@color/lightGray"
                    android:hint="Drop Temp"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/roastparamactivity_add_checkpoint_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"/>
...
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@color/grayBack"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/roastparamactivity_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
...
