<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="fragment_button_0" type="id"/>
    <item name="fragment_button_1" type="id"/>
    <item name="fragment_button_2" type="id"/>

    <item name="roast_remotedata_button" type="id"/>
    <item name="bean_remotedata_button" type="id"/>
    <item name="blend_remotedata_button" type="id"/>

    <item name="roast_roastdata_button" type="id"/>
    <item name="menu_viewroast_button" type="id"/>

    <item name="databrowser_openRoast_button" type="id"/>

    <item name="roastparamactivity_startroast_button" type="id"/>

    <item name="test_roast_id" type="id"/>

</resources>