<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_interface.BlendActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal"
            android:background="@color/grayBack">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></View>

            <Button
                android:id="@+id/menuButton"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/hamburger_icon"
                style="@style/spinnerItemStyle"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Blend"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/grayBack"
            app:tabIndicatorColor="#FFFFFF"
            app:tabTextColor="#FFFFFF"
            app:tabTextAppearance="@style/CustomTextAppearanceTab">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/grayBack" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/lightGray" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="110dp"
        android:weightSum="6">
        <ScrollView
            android:id="@+id/scrollview"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/grayBack"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Name"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/blend_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Name"
                        android:gravity="end"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="Description"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <EditText
                        android:id="@+id/blend_description_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="@color/lightGray"
                        android:hint="Description"
                        android:gravity="end"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Roasts"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/blend_roast_layout"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <Button
                        android:id="@+id/blend_addroast_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/white"
                        android:background="@drawable/round_shape_btn"/>
                    <Spinner
                        android:id="@+id/roast_for_blend_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        style="@style/spinnerItemStyleWhite"
                        />
                </LinearLayout>


            </LinearLayout>


        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@color/grayBack"
            android:layout_weight="1">
            <Button
                android:id="@+id/blend_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>